--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -672,7 +672,7 @@ Examples:
 
 // tag::customCommands[]
 === Learn wrong commands as custom commands
-To help map the command you entered wrongly to the command you originally intended to use.
+To help map the command you entered wrongly into TutorAid to the command you originally intended to execute.
 
 Example:
 Let's say you frequently use the `add` command but can never remember it and always type in `plus` instead.
@@ -680,7 +680,7 @@ This feature helps you map `plus` to `add` so you no longer need to remember the
 
 To learn the wrong command `plus` as `add`:
 
-. You want to do an `add` command but carelessly type in `plus` instead and hit Enter to execute.
+. You want to do an `add` command but carelessly type in `plus` instead and accidentally hit Enter to try and execute the wrong command.
 +
 image::step1.png[width="800", align="left"]
 
@@ -688,7 +688,7 @@ image::step1.png[width="800", align="left"]
 +
 image::step2.png[width="800", align="left"]
 [NOTE]
-You can also choose to discard the wrong command at this stage and carry on with normal operations if you do not want to map `plus` to `add`. Just type `cancel`.
+You can also choose to discard the wrong command at this stage and carry on with normal operations if you do not want to map `plus` to `add`. Just type `cancel` to go back to normal mode. Please also note that you can only type command words such as `add` or `find` at this stage. Typing full commands like `add n/Caesar c/CS2101` results in an error.
 
 . The result box tells you that `plus` has now been mapped to `add`.
 +
