--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -384,13 +384,16 @@ Gets the previous card in the test deck.
 
 image::ExitCommand.png[width="650", align="center"]
 
-Exits the test process when the user is in test mode.
-
-Exams will also terminate automatically upon running out of cards in the test deck.
+Exits test mode.
 
 Triggers a popup with the results of the test.
 
-Do note that premature ending of a test will still count towards your Statistics.
+Popup will also automatically be triggered upon reaching the end of the deck.
+
+However, upon reaching the end of the deck, the user will be able to review and reattempt questions (though it will not count towards the user's score)
+
+[TIP]
+Do note that premature ending of a test will still count towards your User Statistics.
 
 ==== Front-Back Cards: `front`, `back`, `correct`, `wrong`
 
@@ -401,7 +404,7 @@ image::FrontBack.png[]
 
 * Once they have their answer, they can type `back` to view the answer on the back on the card.
 
-* They will then be able to type `correct` or `wrong` to count their results.
+* Once on the card back, one can type `correct` or `wrong` to count their results, which will automatically take them to the next question.
 
 * They can type `front` when they are on the card back to relook at the question.
 ====
@@ -415,7 +418,7 @@ image::MCQCard.png[]
 
 * Users will be able to key in their choice into the command bar, with the top most option as 1 and increasing downwards. Do note only numbers are accepted.
 
-* Keying in the answer will automatically flip the card and evaluate the answer. Users can then use `front` to relook at the question.
+* Keying in the answer will automatically flip the card and evaluate the answer. Users can then use `front` to relook at the question or `next` to go to the next question.
 ====
 
 ==== Java/Javascript Cards: `code`
@@ -427,6 +430,8 @@ image::JsJavaCard.png[]
 * They can then type `code` to launch the appropriate Java/Javascript coding playground to code their programs.
 
 * Upon running their programs, if they pass all test cases, their results will automatically be counted.
+
+* Users can then type `next` to go to the next question.
 ====
 //end::test[]
 
