--- a/docs/team/kendrickang.adoc
+++ b/docs/team/kendrickang.adoc
@@ -10,13 +10,13 @@
 == Overview
 
 People who hold leadership positions, especially those in student-led clubs, have to usually schedule interviews with those interested in applying to
-leadership positions. Usually, there are clashing preferred time slots between interviewees, which the interviewer has to resolve.
+leadership positions during recruitment period. Usually, there are clashing preferred time slots between interviewees, which the interviewer has to resolve.
 We found that the current practice of constant back-and-forth messaging between interviewees and interviewers to resolve this to
-be inefficient. We therefore came up with Scheduler, a desktop application used to automate the process of interview scheduling.
+be inefficient. We therefore came up with Scheduler, a desktop application used to automate and streamline the process of interview scheduling.
 
 Its main feature is matching interviewees with interview time slots to generate an optimal interview timetable, and works with
 two types of data: data on interviewees and interviewers.
-The user interacts with it using a CLI, and it has a GUI created with JavaFX. It is written in Java, and has about 10 kLoC.
+The user interacts with it using a CLI, and it has a GUI created with JavaFX. It is written in Java, and has about 20 kLoC.
 
 == Summary of contributions
 
