--- a/docs/team/coderstellaj.adoc
+++ b/docs/team/coderstellaj.adoc
@@ -16,6 +16,8 @@ endif::[]
 This project portfolio page (PPP) introduces the project, treasurerPro.
 Then the PPP outlines my contributions to the project and showcases the key features I implemented.
 
+=== About the project
+
 My team consists of 5 students from Computer Science/Computer Engineering.
 And the project is part of the module 'CS2103T Software Engineering Project'
 where we were tasked to develop a basic command line interface desktop application by morphing or enhancing an existing AddressBook desktop application.
@@ -202,10 +204,15 @@ As for the complete additions, please refer to
 https://ay1920s1-cs2103t-t13-3.github.io/main/DeveloperGuide.html#reimbursements-tab[reimbursement tab section]
 in the developer guide.
 
-The following is an overview class diagram for reimbursement tab:
+This is an overview class diagram for `LogicManager` of reimbursement tab:
 
 .Overview class diagram of reimbursements tab (reimbursement package)
 image::Reimbursement/ReimbursementTabClassDiagram.png[width="700"]
+
+And this is a
+https://github.com/AY1920S1-CS2103T-T13-3/main/blob/master/docs/images/GeneralSequenceDiagram.png[general sequence diagram]
+of command execution.
+The detailed implementations of command execution in reimbursement tab are in the following section.
 
 === Deadline command feature
 
@@ -219,12 +226,12 @@ The following sequence diagram shows the execution of deadline command:
 .Sequence diagram of deadline command in reimbursements tab (reimbursement package)
 image::Reimbursement/ReimbursementDeadlineCommandSD.png[width="350"]
 
-As shown, a user needs to add a deadline to a reimbursement by specifying the person's name and providing a date.
-The `DeadlineCommandParser` creates a `DeadlineCommand` with person and deadline date information.
-This `DeadlineCommand` is returned back to `LogicManager` of reimbursement and is executed by calling `addDeadline` method in
-`ModelManager`.
+A user needs to add a deadline to a reimbursement by specifying the person's name and providing a date.
+Firstly, the `DeadlineCommandParser` creates a `DeadlineCommand` with person and deadline date information.
+This `DeadlineCommand` is returned back to `LogicManager` of reimbursement.
+Secondly, as shown in the figure, the command is executed by calling `addDeadline` method in `ModelManager`.
 After the operations, `LogicManager` gets updated reimbursement list from `ModelManager` and displays the deadline in reimbursement list.
-After that, the deadline is saved into a `reimbursementInformation.txt` file.
+Lastly, the deadline is saved into a `reimbursementInformation.txt` file.
 
 .Activity diagram of deadline command in reimbursements tab (reimbursement package)
 image::Reimbursement/ReimbursementTabActivityDiagramDeadlineCommand.png[width="350"]
@@ -233,42 +240,65 @@ As shown by the above activity diagram, when a user inputs a person who does not
 Otherwise, when the execution is successful, a response informs the user that deadline is successfully added to the reimbursement.
 
 
-==== Done Command feature
+//==== Done Command feature
+//
+//This command is used to mark a reimbursement that has been done.
+//Done command requires access to `Model` of the person package.
+//Person field should be provided and the person's name should exist in reimbursement list.
+//
+//[[ReimbursementDoneCommandSD]]
+//.Sequence diagram of done command execution in reimbursements tab (reimbursement package)
+//image::Reimbursement/ReimbursementDoneCommandSD.png[width="350"]
+//
+//A user needs to mark a reimbursement as done by specifying the person's name for the specific reimbursement.
+//The `DeadlineCommandParser` creates a `DoneCommand` with person's information.
+//As shown in the above figure, `DoneCommand` is returned back to `LogicManager`
+//and it is executed by calling `doneReimbursement` method in
+//`ModelManager`.
+//After the operations, the status of transactions that consist of this reimbursement is updated to `True`
+//and that reimbursement is deleted from the reimbursement list.
+//Then the updated reimbursement list is displayed and this new list without that deleted reimbursement is saved.
+//
+//The following figure shows how transactions' status is updated.
+//Firstly, the reimbursement which contains the person's name updates status of all transactions that made up of the reimbursement.
+//Then `LogicManager` gets the updated transaction list and passes this list to `StorageManager`
+//of transaction tab to save it.
+//
+//[[ReimbursementUpdateTransactionsSD]]
+//.Sequence diagram of updating transactions in reimbursements tab (reimbursement package)
+//image::Reimbursement/ReimbursementUpdateTransactionsSD.png[width="500"]
+//
+//<<ReimbursementTabActivityDiagramDoneCommand, The following activity diagram>> shows the steps needed for done command.
+//The person's name is checked whether it exists in reimbursement list.
+//If not, our app informs the user that command is incorrect.
+//If command is valid, the reimbursement containing the provided person's name is deleted from reimbursement list and will not be displayed.
+//
+//[[ReimbursementTabActivityDiagramDoneCommand]]
+//.Activity Diagram of Done Command in Reimbursements tab (reimbursement package)
+//image::Reimbursement/ReimbursementTabActivityDiagramDoneCommand.png[width="250"]
 
-This command is used to mark a reimbursement that has been done.
-Done command requires access to `Model` of the person package.
+=== Find command feature
+
+This command is used to find a reimbursement that contains the person's name.
+The find command requires access to `Model` of the person package.
 Person field should be provided and the person's name should exist in reimbursement list.
 
-[[ReimbursementDoneCommandSD]]
-.Sequence diagram of done command execution in reimbursements tab (reimbursement package)
-image::Reimbursement/ReimbursementDoneCommandSD.png[width="350"]
+.Sequence diagram of find command execution in reimbursements tab (reimbursement package)
+image::Reimbursement/ReimbursementFindCommandSD.png[width="350"]
 
-A user needs to mark a reimbursement as done by specifying the person's name for the specific reimbursement.
-The `DeadlineCommandParser` creates a `DoneCommand` with person's information.
-As shown in the above figure, `DoneCommand` is returned back to `LogicManager`
-and it is executed by calling `doneReimbursement` method in
+A user needs to find a reimbursement by providing the person's name.
+As shown in the above figure, `FindCommand` is executed by calling `findReimbursement` method in
 `ModelManager`.
-After the operations, the status of transactions that consist of this reimbursement is updated to `True`
-and that reimbursement is deleted from the reimbursement list.
-Then the updated reimbursement list is displayed and this new list without that deleted reimbursement is saved.
+After the operations, that reimbursement is returned and reimbursement tab only shows a `filteredList` which contains this single reimbursement.
 
-The following figure shows how transactions' status is updated.
-Firstly, the reimbursement which contains the person's name updates status of all transactions that made up of the reimbursement.
-Then `LogicManager` gets the updated transaction list and passes this list to `StorageManager`
-of transaction tab to save it.
+[[ReimbursementTabActivityDiagramFindCommand]]
+.Activity diagram of find command in reimbursements tab (reimbursement package)
+image::Reimbursement/ReimbursementTabActivityDiagramFindCommand.png[width="270"]
 
-[[ReimbursementUpdateTransactionsSD]]
-.Sequence diagram of updating transactions in reimbursements tab (reimbursement package)
-image::Reimbursement/ReimbursementUpdateTransactionsSD.png[width="500"]
-
-<<ReimbursementTabActivityDiagramDoneCommand, The following activity diagram>> shows the steps needed for done command.
+The above activity diagram shows the steps needed for find command.
 The person's name is checked whether it exists in reimbursement list.
-If not, our app informs the user that command is incorrect.
-If command is valid, the reimbursement containing the provided person's name is deleted from reimbursement list and will not be displayed.
-
-[[ReimbursementTabActivityDiagramDoneCommand]]
-.Activity Diagram of Done Command in Reimbursements tab (reimbursement package)
-image::Reimbursement/ReimbursementTabActivityDiagramDoneCommand.png[width="250"]
+If not, our app informs the user that person is not in the list.
+If command is valid, the found reimbursement is displayed in the tab.
 
 == Overall design considerations
 
