fix: refactoring artifacts
Oops!

--- a/docs/tutorials/AddRemark.adoc
+++ b/docs/tutorials/AddRemark.adoc
@@ -313,7 +313,7 @@ Let's update `JsonAdaptedPerson` to work with our new `Person`!
 
 While the changes to code may be minimal, the test data will have to be updated as well.
 
-WARNING: You must delete AddressBook's storage file located at `/data/addressbook.json` before running it!
+WARNING: You must delete AddressBook's storage file located at `/data/visit.json` before running it!
 Not doing so will cause AddressBook to default to an empty address book!
 
 Check out link:https://github.com/nus-cs2103-AY1920S1/addressbook-level3/commit/ce4f9b70f524d2395948861d80d57fda9ae6e82e#diff-07708562699e2436c717f3330bafae1e[this commit] to see what the changes entail.
