--- a/docs/team/lightz96.adoc
+++ b/docs/team/lightz96.adoc
@@ -68,11 +68,12 @@ and ensure that it works correctly.
 *** Managed issues assigned to me from version 1.0 to version 1.4 (https://github.com/AY1920S1-CS2103T-W12-2/main/issues?utf8=%E2%9C%93&q=is%3Aissue+is%3Aclosed+assignee%3Alightz96+[Issues assigned])
 ** Enhancement to existing features
 *** Revamped the entire user interface. (Pull request https://github.com/AY1920S1-CS2103T-W12-2/main/pull/193[#193])
-*** Added the ability to view the usage of a specific command. (Pull request https://github.com/AY1920S1-CS2103T-W12-2/main/pull/187[#187])
+*** Added the ability to view the usage of a specific command. (Pull request https://github.com/AY1920S1-CS2103T-W12-2/main/pull/167[#167], https://github.com/AY1920S1-CS2103T-W12-2/main/pull/187[#187])
 ** Documentation
 *** Inserted content from external files (E.g. SettingUp.adoc) into Developer Guide and changed to THRIFT context. (Pull Request https://github.com/AY1920S1-CS2103T-W12-2/main/pull/233[#233])
 ** Community
-*** Reviewed Pull Requests (with non-trivial review comments): https://github.com/AY1920S1-CS2103T-W12-2/main/pull/272[#272], https://github.com/AY1920S1-CS2103T-W12-2/main/pull/211[#211], https://github.com/AY1920S1-CS2103T-W12-2/main/pull/143[#143]
+*** Reviewed Pull Requests (with non-trivial review comments): https://github.com/AY1920S1-CS2103T-W12-2/main/pull/143[#143], https://github.com/AY1920S1-CS2103T-W12-2/main/pull/211[#211], https://github.com/AY1920S1-CS2103T-W12-2/main/pull/272[#272]
+*** Reported bugs for other team. (https://github.com/lightz96/ped/issues[Bugs reported])
 ** Tools
 *** Integrated https://ci.appveyor.com/project/lightz96/main[AppVeyor] (Continuous Integration tool), https://app.netlify.com/sites/thrift/deploys[Netlify] (Deployment Preview tool), https://coveralls.io/github/AY1920S1-CS2103T-W12-2/main[Coveralls] (Code Coverage tool) to the project. (Pull request https://github.com/AY1920S1-CS2103T-W12-2/main/pull/46[#46])
 
